--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://TonyeJim-George.github.io/Portfolio-website",
   "name": "vite-react-typescript-starter",
   "private": true,
   "version": "0.0.0",
